@@ -3,6 +3,7 @@
 * add gerrit change id to output dir
 * add ability to filter for core resources
 * Store pson catalogs as gziped files
+* Fix issue resulting in hosts getting shifted to the wrong list - T224977
 
 ## 2022-11-7
 ### 2.4.2
